// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays claimed prescriptions from session 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Claimed Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions which have been claimed for</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BF</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BF">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BF.box" id="prescription.FC6D78-A83008-EDF7BF.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BF"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BF.box--label" for="prescription.FC6D78-A83008-EDF7BF.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/claim?prescription_id=FC6D78-A83008-EDF7BF&amp;amend=true"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Amend the claim on this prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Displays dispensed prescriptions from session 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Dispensed Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Partially and fully dispensed prescriptions</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BF</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BF">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BF.box" id="prescription.FC6D78-A83008-EDF7BF.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BF"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BF.box--label" for="prescription.FC6D78-A83008-EDF7BF.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/dispense?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Dispense prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/withdraw?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Withdraw prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/claim?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Claim for prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Displays my prescriptions page 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<p>You do not have any active prescriptions. Once you create or release a prescription you will see it here</p>"
`;

exports[`Displays released prescriptions from session 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Released Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions which have been downloaded</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BF</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BF">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BF.box" id="prescription.FC6D78-A83008-EDF7BF.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BF"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BF.box--label" for="prescription.FC6D78-A83008-EDF7BF.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/return?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Return prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/dispense?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Dispense prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BF"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Displays sent prescriptions from session 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Sent Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions created and sent</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BI</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BI">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BI.box" id="prescription.FC6D78-A83008-EDF7BI.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BI"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BI.box--label" for="prescription.FC6D78-A83008-EDF7BI.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/release?prescription_id=FC6D78-A83008-EDF7BI"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Release prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BI"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Displays sent, released, dispensed and claimed prescriptions from session 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">My Prescriptions</label></h1>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Sent Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions created and sent</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BA</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BA">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BA.box" id="prescription.FC6D78-A83008-EDF7BA.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BA"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BA.box--label" for="prescription.FC6D78-A83008-EDF7BA.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/release?prescription_id=FC6D78-A83008-EDF7BA"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Release prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BA"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Released Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions which have been downloaded</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BB</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BB">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BB.box" id="prescription.FC6D78-A83008-EDF7BB.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BB"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BB.box--label" for="prescription.FC6D78-A83008-EDF7BB.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/return?prescription_id=FC6D78-A83008-EDF7BB"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Return prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/dispense?prescription_id=FC6D78-A83008-EDF7BB"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Dispense prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BB"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Dispensed Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Partially and fully dispensed prescriptions</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BC</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BC">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BC.box" id="prescription.FC6D78-A83008-EDF7BC.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BC"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BC.box--label" for="prescription.FC6D78-A83008-EDF7BC.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/dispense?prescription_id=FC6D78-A83008-EDF7BC"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Dispense prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/withdraw?prescription_id=FC6D78-A83008-EDF7BC"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Withdraw prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/claim?prescription_id=FC6D78-A83008-EDF7BC"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Claim for prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BC"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
<div class="nhsuk-table__panel-with-heading-tab">
  <h3 class="nhsuk-table__heading-tab">Claimed Prescriptions</h3>
  <table class="nhsuk-table">
    <caption class="nhsuk-table__caption">Prescriptions which have been claimed for</caption>
    <thead class="nhsuk-table__head">
      <tr class="nhsuk-table__row">
        <th class="nhsuk-table__header" scope="col">ID</th>
        <th class="nhsuk-table__header" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody class="nhsuk-table__body">
      <tr class="nhsuk-table__row">
        <td class="nhsuk-table__cell"><label class="nhsuk-label">FC6D78-A83008-EDF7BD</label>
          <form>
            <div class="nhsuk-form-group">
              <div class="nhsuk-checkboxes" id="prescription.FC6D78-A83008-EDF7BD">
                <div class="nhsuk-checkboxes__item"><input class="nhsuk-checkboxes__input" name="prescription.FC6D78-A83008-EDF7BD.box" id="prescription.FC6D78-A83008-EDF7BD.box" type="checkbox" data-checkbox-exclusive-group="prescription.FC6D78-A83008-EDF7BD"><label class="nhsuk-label nhsuk-checkboxes__label" id="prescription.FC6D78-A83008-EDF7BD.box--label" for="prescription.FC6D78-A83008-EDF7BD.box">Add to Compare</label></div>
              </div>
            </div>
          </form>
        </td>
        <td class="nhsuk-table__cell">
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/dispense/claim?prescription_id=FC6D78-A83008-EDF7BD&amp;amend=true"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Amend the claim on this prescription</span></a></div>
          <div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="baseUrl/view?prescription_id=FC6D78-A83008-EDF7BD"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
                <path d="M0 0h24v24H0z" fill="none"></path>
                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
              </svg><span class="nhsuk-action-link__text">Check prescription status</span></a></div>
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;
